--- a/view/register.html
+++ b/view/register.html
@@ -14,7 +14,7 @@
         <div class="flex justifyEvenly boxLinks">
             <a href="../index.html" class="linkHeader">Accueil</a>
             <a href="#" class="linkHeader">Fourm</a>
-            <a href="#" class="linkHeader">Login</a>
+            <a href="./login.html" class="linkHeader">Login</a>
         </div>
     </header>
 
