--- a/view/login.html
+++ b/view/login.html
@@ -6,9 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le fourm de la fourme et du lore Elden Ring</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/css/loginStyle.css">
 </head>
 <body>
 
+    <header>
+        <div class="flex justifyEvenly boxLinks">
+            <a href="../index.html" class="linkHeader">Accueil</a>
+            <a href="#" class="linkHeader">Fourm</a>
+            <a href="./login.html" class="linkHeader">Login</a>
+        </div>
+    </header>
+
+    <div class="row w100">
+        <div class="col-6 row">
+            <form action="#" class="row borderFF ml1 selfCenter">
+                <div class="row col-12">
+                    <label for="email" class="col-2 my4 ml1">Adresse email</label>
+                    <div class="col-4"></div>
+                    <input type="email" name="email" id="email" class="col-6" placeholder="johnelden@landsbetween.go">
+                </div>
+                <div class="row col-12">
+                    <label for="password" class="col-2 my2 ml1">Mot de passe</label>
+                    <div class="col-4"></div>
+                    <input type="password" name="password" id="password" class="col-6">
+                </div>
+
+                <div class="row col-12">
+                    <div class="col-4"></div>
+                    <button type="submit" id="btnLogin" class="col-4">Connexion</button>
+                    <div class="col-4"></div>
+                </div>
+            </form>
+        </div>
+        <div class="col-6 row">
+            <div class="col-2"></div>
+            <img src="../assets/img/loginIllustration.jpg" alt="Login" class="imgLogin selfCenter col-8">
+            <div class="col-2"></div>
+        </div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
