js register commencé, problème de localStorage.setItems, et potentiellement dans la condition if de validation du form. A finir

--- a/assets/css/loginStyle.css
+++ b/assets/css/loginStyle.css
@@ -7,6 +7,14 @@ body{
     margin: 0;
     padding: 0;
 }
+.colorBody{
+    color: lightblue;
+    text-decoration: none;
+    margin-left: 1rem;
+}
+.colorBody:hover{
+    text-decoration: underline;
+}
 span{
     font-weight: bold;
     color: aquamarine;
