--- a/view/login.html
+++ b/view/login.html
@@ -13,7 +13,7 @@
     <header>
         <div class="flex justifyEvenly boxLinks">
             <a href="../index.html" class="linkHeader">Accueil</a>
-            <a href="#" class="linkHeader">Fourm</a>
+            <a href="./forum.html" class="linkHeader">Fourm</a>
             <a href="./login.html" class="linkHeader">Login</a>
         </div>
     </header>
@@ -38,6 +38,10 @@
                     <div class="col-4"></div>
                 </div>
             </form>
+
+            <div class="flex justifyCenter">
+                <a href="./register.html" class="colorBody">Pas encore de compte ?</a>
+            </div>
         </div>
         <div class="col-6 row">
             <div class="col-2"></div>
