--- a/assets/css/fourmStyle.css
+++ b/assets/css/fourmStyle.css
@@ -1,17 +1,3 @@
-
-#goToForum, #goToLogin, #goToRegister{
-    border: 0;
-    background-color: darkblue;
-    border-radius: 0.5rem;
-    filter: drop-shadow(0.2rem 0.2rem 0.2rem cadetblue);
-    height: 45px;
-    color: white;
-    width: 100%;
-}
-#goToForum:hover, #goToLogin:hover, #goToRegister:hover{
-    background-color: dodgerblue;
-    text-decoration: underline;
-}
 body{
     background-color: #2b2b2b;
     color: lightblue;
@@ -25,6 +11,17 @@ span{
 }
 .flex{
     display: flex;
+}
+.borderFF{
+    border-top: solid 2px rgb(187, 233, 233);
+    border-bottom: solid 2px rgb(187, 233, 233);
+    padding: 3rem 0 3rem 0;
+}
+.ml1{
+    margin-left: 1rem;
+}
+.justifyCenter{
+    justify-content: center;
 }
 .justifyBetween{
     justify-content: space-between;
@@ -55,24 +52,34 @@ header{
 .linkHeader:hover{
     text-decoration: underline;
 }
-#dateCoHeader{
-    margin-right: 1rem;
-}
-.ml1{
-    margin-left: 1rem;
-}
 .justifyEvenly{
     justify-content: space-evenly;
 }
-.borderFF{
-    border-top: solid 2px rgb(187, 233, 233);
-    border-bottom: solid 2px rgb(187, 233, 233);
-    padding: 3rem 0 3rem 0;
+#dateCoHeader{
+    margin-right: 1rem;
 }
-.p50 {
-    padding: 30px 0 30px 0;
-    margin: 3rem 0 3rem 0;
+.card{
+    width: 200px;
+    height: 260px;
+    background-color: #c2c2c2;
+    color: white;
+    border-radius: 1rem;
+    font-weight: 300;
+    border: solid 1px black;
+    margin: 3rem;
 }
-.w100{
+.imgCard{
     width: 100%;
+    border-radius: 1rem 1rem 0 0;
+    height: 110px;
+}
+.card>button{
+    border: 1px solid darkcyan;
+    background-color: cadetblue;
+    color: white;
+}
+.card>button:hover{
+    background-color: darkslategray;
+    border: solid 1px darkslategrey;
+    text-decoration: underline;
 }
