--- a/view/forum.html
+++ b/view/forum.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le fourm de la fourme et du lore Elden Ring</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/indexStyle.css">
+    <link rel="stylesheet" href="../assets/css/fourmStyle.css">
 </head>
 <body>
+
     <header>
         <div class="leToutHaut">
             <div class="flex justifyBetween">
@@ -37,52 +38,46 @@
         </div>
         <div class="flex justifyEvenly boxLinks">
             <a href="../index.html" class="linkHeader">Accueil</a>
-            <a href="./view/forum.html" class="linkHeader">Fourm</a>
+            <a href="./forum.html" class="linkHeader">Fourm</a>
             <a href="./login.html" class="linkHeader">Login</a>
         </div>
     </header>
 
-    <main>
-        <div class="row my2 w100">
-            <div class="col-4"></div>
-            <img src="./assets/img/indexIllustration.jpg" alt="Plongez dans l'univers du lore Elden Ring" class="col-4">
-            <div class="col-4"></div>
+    
+    <div class="borderFF flex justifyCenter my2">
+        <p>Bienvenue dans le <span>Fourm</span>, ou vous pouvez parler de <span>Fourme</span> ou du <span>Lore d'Elden Ring</span> sans discrimination de l'un ou l'autre.</p>
+    </div>
+
+    <div class="flex justifyBetween">
+        <div class="card">
+            <div class="flex justifyCenter">
+                <img src="../assets/img/fourmeCard.jpg" alt="Fourme" class="imgCard">
+            </div>
+            <p class="ml1 my2">La <span>Fourme</span>, Le Fromage des Dieux</p>
+            <button id="goToFourme">Parlez-en !</button>
         </div>
-        <div class="row p50">
-            <div class="col-3"></div>
-            <div class="col-6 borderFF">
-                <p>
-                    Dans ce forum, vous allez en apprendre plus sur Elden Ring, le jeu de l'année 2022, édité par From Software et créé par <span>Hidetaka Miyazaki</span> et <span>George R.R. Martin</span>, ainsi que la Fourme, le fromage. 
-                </p>
+        <div class="card">
+            <div class="flex justifyCenter">
+                <img src="../assets/img/loreOuFromageCard.jpg" alt="Fourme" class="imgCard">
             </div>
-            <div class="col-3"></div>
+            <p class="ml1 my2"><span>Lore</span> ou <span>Fromage</span>, peu importe.</p>
+            <button id="goToLore">Parlez-en !</button>
         </div>
-        <div class="row p50">
-            <div class="col-4 row">
-                <div class="col-6">
-                    <a href="./view/login.html">
-                        <button id="goToLogin">Login</button>
-                    </a>
-                </div>
-                <div class="col-3"></div>
-                <div class="col-3"></div>
+        <div class="card">
+            <div class="flex justifyCenter">
+                <img src="../assets/img/eldenRingCard.jpg" alt="Elden Ring" class="imgCard">
             </div>
-            <div class="col-4">
-                <button id="goToForum">Accéder au Fourm</button>
-            </div>
-            <div class="col-4 row">
-                <div class="col-3"></div>
-                <div class="col-3"></div>
-                <div class="col-6">
-                    <a href="./view/register.html">
-                        <button id="goToRegister">Créer un compte</button>
-                    </a>
-                </div>
-            </div>
+            <p class="ml1 my2"><span>ELDEN RING</span>, GOTY 2022</p>
+            <button id="goToFeur">Parlez-en !</button>
         </div>
-    </main>
+    </div>
 
 
+
+
+
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </body>
 </html>
