--- a/view/login.html
+++ b/view/login.html
@@ -33,24 +33,29 @@
                 </div>
 
                 <div class="row col-12">
-                    <div class="col-4"></div>
-                    <button type="submit" id="btnLogin" class="col-4">Connexion</button>
-                    <div class="col-4"></div>
+                    <button type="button" id="btnLogin" class="col-4" onclick="login()">Connexion</button>
+                    <div class="col-8">
+                        <p id="pasCoPossible">Vos identifiants sont invalides, si vous n'avez pas de compte, veuillez en créer un avant de vous connecter.</p>
+                    </div>
                 </div>
             </form>
-
-            <div class="flex justifyCenter">
-                <a href="./register.html" class="colorBody">Pas encore de compte ?</a>
-            </div>
         </div>
         <div class="col-6 row">
             <div class="col-2"></div>
             <img src="../assets/img/loginIllustration.jpg" alt="Login" class="imgLogin selfCenter col-8">
             <div class="col-2"></div>
         </div>
+            
+
+        <div class="flex justifyCenter">
+            <a href="./register.html" class="colorBody">Pas encore de compte ?</a>
+        </div>
+        </div>
+        
     </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="../assets/js/login.js"></script>
 </body>
 </html>
