--- a/assets/css/fourmStyle.css
+++ b/assets/css/fourmStyle.css
@@ -4,6 +4,7 @@ body{
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 16px;
+    width: 100%;
 }
 span{
     font-weight: bold;
@@ -35,7 +36,6 @@ header{
     background-color: darkslategrey;
     color: antiquewhite;
     height: 125px;
-    width: 100%;
     filter: drop-shadow(0.2rem 0.2rem 0.2rem cadetblue);
 }
 .boxLinks{
@@ -58,28 +58,22 @@ header{
 #dateCoHeader{
     margin-right: 1rem;
 }
-.card{
-    width: 200px;
-    height: 260px;
-    background-color: #c2c2c2;
-    color: white;
-    border-radius: 1rem;
-    font-weight: 300;
-    border: solid 1px black;
-    margin: 3rem;
-}
 .imgCard{
     width: 100%;
-    border-radius: 1rem 1rem 0 0;
-    height: 110px;
 }
-.card>button{
-    border: 1px solid darkcyan;
+.card{
+    height: 300px;
+    width: 250Px;
+    background-color: #d3d0d0;
+    margin: 5rem;
+}
+.btnCard{
+    width: 100%;
+    border: 1px solid darkslategray;
     background-color: cadetblue;
     color: white;
 }
-.card>button:hover{
-    background-color: darkslategray;
-    border: solid 1px darkslategrey;
+.btnCard:hover{
     text-decoration: underline;
+    background-color: darkslategray;
 }
