--- a/view/lore.html
+++ b/view/lore.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le fourm de la fourme et du lore Elden Ring</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/indexStyle.css">
+    <link rel="stylesheet" href="../assets/css/sujetStyle.css">
 </head>
 <body>
+
     <header>
         <div class="leToutHaut">
             <div class="flex justifyBetween">
@@ -37,51 +38,52 @@
         </div>
         <div class="flex justifyEvenly boxLinks">
             <a href="../index.html" class="linkHeader">Accueil</a>
-            <a href="./view/forum.html" class="linkHeader">Fourm</a>
-            <a href="./view/login.html" class="linkHeader">Login</a>
+            <a href="./forum.html" class="linkHeader">Fourm</a>
+            <a href="./login.html" class="linkHeader">Login</a>
         </div>
     </header>
 
+
+
     <main>
-        <div class="row my2 w100">
+        <div class="flex justifyCenter borderFF my2">
+            <p>Bienvenue dans la section <span>Lore</span> et <span>Fourme</span>, où vous pouvez parler de l'un ou l'autre comme bon vous semble.</p>
+        </div>
+
+        <div class="row my2">
             <div class="col-4"></div>
-            <img src="./assets/img/indexIllustration.jpg" alt="Plongez dans l'univers du lore Elden Ring" class="col-4">
+            <img src="../assets/img/eldenRingCard.jpg" alt="Lore" class="col-4">
             <div class="col-4"></div>
         </div>
-        <div class="row p50">
-            <div class="col-3"></div>
-            <div class="col-6 borderFF">
-                <p>
-                    Dans ce forum, vous allez en apprendre plus sur Elden Ring, le jeu de l'année 2022, édité par From Software et créé par <span>Hidetaka Miyazaki</span> et <span>George R.R. Martin</span>, ainsi que la Fourme, le fromage. 
-                </p>
-            </div>
-            <div class="col-3"></div>
-        </div>
-        <div class="row p50">
-            <div class="col-4 row">
-                <div class="col-6">
-                    <a href="./view/login.html">
-                        <button id="goToLogin">Login</button>
-                    </a>
-                </div>
-                <div class="col-3"></div>
-                <div class="col-3"></div>
+
+       <div class="flex justifyCenter">
+        <table>
+            <thead>
+                <tr>
+                    <td>Auteur</td>
+                    <td>Sujet</td>
+                    <td>Date et Heure de publication</td>
+                </tr>
+            </thead>
+            <tbody id="tBody">
+                
+            </tbody>
+        </table>
+       </div>
+
+       <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4">
+                <button class="btnSujet my2" onclick="creerSujet()">Créer un sujet </button>
             </div>
             <div class="col-4"></div>
-            <div class="col-4 row">
-                <div class="col-3"></div>
-                <div class="col-3"></div>
-                <div class="col-6">
-                    <a href="./view/register.html">
-                        <button id="goToRegister">Créer un compte</button>
-                    </a>
-                </div>
-            </div>
-        </div>
+       </div>
     </main>
 
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="./assets/js/headerInfos.js"></script>
+    <script src="../assets/js/creerSujet.js"></script>
+    <script src="../assets/js/headerInfos.js"></script>
+    <script src="../assets/js/loginCheck.js"></script>
+    
 </body>
 </html>
