--- a/view/pageSujet.html
+++ b/view/pageSujet.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../assets/css/sujetStyle.css">
+    <link rel="stylesheet" href="../assets/css/pageSujetStyle.css">
 </head>
 <body>
-
+    
     <header>
         <div class="leToutHaut">
             <div class="flex justifyBetween">
@@ -43,48 +43,42 @@
         </div>
     </header>
 
-
-
     <main>
-        <div class="flex justifyCenter borderFF my2">
-            <p>Ici, on parle du <span>Lore</span> d'Elden Ring, le GOTY 2022. Tous les sujets sont bons à évoquer, même la fourme.</p>
-        </div>
 
-        <div class="row my2">
-            <div class="col-4"></div>
-            <img src="../assets/img/eldenRingCard.jpg" alt="Lore" class="col-4">
-            <div class="col-4"></div>
-        </div>
-
-       <div class="flex justifyCenter">
-        <table>
-            <thead>
-                <tr>
-                    <td>Auteur</td>
-                    <td>Sujet</td>
-                    <td>Date et Heure de publication</td>
-                </tr>
-            </thead>
-            <tbody id="tBody">
-                
-            </tbody>
-        </table>
-       </div>
-
-       <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4">
-                <button class="btnSujet my2" onclick="creerSujet()">Créer un sujet </button>
+        <div class="borderFF my2">
+            <div class="row">
+                <div class="flex justifyCenter col-10">
+                <p id="sujetContent"></p>
+                </div>
+                <div class=" col-2 row">
+                    <div class="row">
+                        <span>
+                            <p id="sujetAuteur" class="col-6"></p>
+                        </span>
+                        <p id="sujetHeureDate" class="col-6"></p>
+                    </div>
+                </div>
             </div>
-            <div class="col-4"></div>
-       </div>
+        </div>
+        
+
+        <!-- <div class="container">
+            <div class="commentaire row">
+                <div class="col-2"><span id="auteurComm"></span></div>
+                <div class="col-8"></div>
+                <div class="col-2"><span id="heureComm"></span></div>
+                <div class="col-12"><span id="contentComm"></span></div>
+            </div>
+        </div> probablement tout ça à rebosser demain, JS inclus, mais j'approche de la fin. createElement() à utiliser, surement pas d'ID, juste du innerHTML pur, avec les balises et tout. moyen d'utiliser les classes ?? tester pour bootsrap-->
+        <button id="addComm" onclick="addComm()">Ecrire un commentaire</button>
+
     </main>
 
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="../assets/js/creerSujet.js"></script>
+    <script src="../assets/js/pageSujet.js"></script>
+    <script src="../assets/js/replaceDansPageSujet.js"></script>
     <script src="../assets/js/headerInfos.js"></script>
     <script src="../assets/js/loginCheck.js"></script>
-    <script src="../assets/js/pageSujet.js"></script>
-    
 </body>
 </html>
