premiere version comm manque css, sujet à implanter sur les autres pages

--- a/view/pageSujet.html
+++ b/view/pageSujet.html
@@ -62,14 +62,10 @@
         </div>
         
 
-        <!-- <div class="container">
-            <div class="commentaire row">
-                <div class="col-2"><span id="auteurComm"></span></div>
-                <div class="col-8"></div>
-                <div class="col-2"><span id="heureComm"></span></div>
-                <div class="col-12"><span id="contentComm"></span></div>
-            </div>
-        </div> probablement tout ça à rebosser demain, JS inclus, mais j'approche de la fin. createElement() à utiliser, surement pas d'ID, juste du innerHTML pur, avec les balises et tout. moyen d'utiliser les classes ?? tester pour bootsrap-->
+
+        <div class="containerComms my2">
+
+        </div>
         <button id="addComm" onclick="addComm()">Ecrire un commentaire</button>
 
     </main>
