--- a/assets/css/pageSujetStyle.css
+++ b/assets/css/pageSujetStyle.css
@@ -6,6 +6,7 @@ body{
     font-size: 16px;
     padding: 0;
     margin: 0;
+    width: 100%;
 }
 span{
     font-weight: bold;
@@ -18,6 +19,21 @@ span{
     color: white;
     border-radius: 0.5rem;
     text-align: center;
+}
+.boxComm{
+    background-color: darkcyan;
+    color: white;
+    min-height: 150px;
+    width: 100%;
+    border-radius: 1rem;
+    padding: 1rem;
+}
+.boxComm> span{
+    text-decoration: underline;
+}
+.containerComms{
+    width: 90%;
+    background-color: #353535;
 }
 .flex{
     display: flex;
