changé le prompt en form pour pouvoir recupérer les infos du sujet depuis l'url need bosser sur ça demain

--- a/view/fromage.html
+++ b/view/fromage.html
@@ -84,6 +84,7 @@
     <script src="../assets/js/creerSujet.js"></script>
     <script src="../assets/js/headerInfos.js"></script>
     <script src="../assets/js/loginCheck.js"></script>
+    <script src="../assets/js/pageSujet.js"></script>
     
 </body>
 </html>
