--- a/assets/css/sujetStyle.css
+++ b/assets/css/sujetStyle.css
@@ -45,6 +45,15 @@ header{
 .my2{
     margin-top: 2rem;
 }
+input{
+    width: 65%;
+    border: 0;
+    border-radius: 0.5rem;
+    background-color: blanchedalmond;
+    height: 40px;
+    margin: 5rem 0 0 5rem;
+    color: #2b2b2b;
+}
 .linkHeader{
     color: antiquewhite;
     text-decoration: none;
@@ -93,6 +102,14 @@ thead{
     height: 45px;
     color: white;
     width: 100%;
+}
+.formSujet{
+    border-radius: 1rem;
+    color: snow;
+    border: 1px dashed #2b2b2b;
+    display: none;
+    width: 100%;
+    height: 350px;
 }
 .btnSujet:hover{
     background-color: dodgerblue;
