--- a/view/pageSujet.html
+++ b/view/pageSujet.html
@@ -66,7 +66,11 @@
         <div class="containerComms my2">
 
         </div>
-        <button id="addComm" onclick="addComm()">Ecrire un commentaire</button>
+        <div class="row">
+            <div class="col-4"></div>
+            <button id="addComm" onclick="addComm()" class="col-4">Ecrire un commentaire</button>
+            <div class="col-4"></div>
+        </div>
 
     </main>
 
