--- a/view/loreFromage.html
+++ b/view/loreFromage.html
@@ -83,16 +83,18 @@
         <div class="col-3"></div>
         <div class="col-6">
             <div class="row formSujet">
-                <label for="sujet" class="col-4">Quel sujet voulez-vous aborder ?</label>
-            <input type="text" name="sujet" id="sujet" class="col-8">
+                <form action="#">
+                    <label for="sujet" class="col-4">Quel sujet voulez-vous aborder ?</label>
+                    <input type="text" name="sujet" id="sujet" class="col-8">
 
-            <div class="row">
-                <div class="col-3"></div>
-                <div class="col-6">
-                    <button class="btnSujet my2" id="sendSujet" onclick="sendSujet()">Envoyer</button>
-                </div>
-                <div class="col-3"></div>
-            </div>
+                    <div class="row">
+                        <div class="col-3"></div>
+                        <div class="col-6">
+                            <button class="btnSujet my2" onclick="sendSujet()">Envoyer</button>
+                        </div>
+                        <div class="col-3"></div>
+                    </div>
+                </form>
             </div>
         </div>
         <div class="col-3"></div>
