--- a/view/lore.html
+++ b/view/lore.html
@@ -78,6 +78,27 @@
             </div>
             <div class="col-4"></div>
        </div>
+
+       <div class="row my2">
+        <div class="col-3"></div>
+        <div class="col-6">
+            <div class="row formSujet">
+                <form action="#">
+                    <label for="sujet" class="col-4">Quel sujet voulez-vous aborder ?</label>
+                    <input type="text" name="sujet" id="sujet" class="col-8">
+
+                    <div class="row">
+                        <div class="col-3"></div>
+                        <div class="col-6">
+                            <button class="btnSujet my2" onclick="sendSujet()">Envoyer</button>
+                        </div>
+                        <div class="col-3"></div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col-3"></div>
+       </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
